[gd_scene load_steps=5 format=3 uid="uid://test_battle"]

[ext_resource type="Script" path="res://scripts/battle/test_battle_scene.gd" id="1_test"]
[ext_resource type="PackedScene" uid="uid://turn_order" path="res://scenes/ui/turn_order_ui.tscn" id="2_turn"]
[ext_resource type="PackedScene" uid="uid://command_ui" path="res://scenes/ui/command_ui.tscn" id="3_command"]
[ext_resource type="PackedScene" uid="uid://target_selector" path="res://scenes/ui/target_selector_ui.tscn" id="4_target"]

[node name="TestBattleScene" type="Node2D"]
script = ExtResource("1_test")

[node name="Background" type="ColorRect" parent="."]
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0.12, 0.14, 0.18, 1)

[node name="EnemySprites" type="Node2D" parent="."]
position = Vector2(0, 0)

[node name="PlayerSprites" type="Node2D" parent="."]
position = Vector2(0, 0)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TurnOrderUI" parent="CanvasLayer" instance=ExtResource("2_turn")]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -250.0
offset_top = 10.0
offset_right = 250.0
offset_bottom = 70.0
grow_horizontal = 2

[node name="PlayerStatusContainer" type="VBoxContainer" parent="CanvasLayer"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -220.0
offset_top = 80.0
offset_right = -10.0
offset_bottom = 350.0
grow_horizontal = 0
theme_override_constants/separation = 5

[node name="EnemyStatusContainer" type="VBoxContainer" parent="CanvasLayer"]
anchors_preset = 0
offset_left = 10.0
offset_top = 450.0
offset_right = 300.0
offset_bottom = 630.0
theme_override_constants/separation = 8

[node name="BattleLog" type="RichTextLabel" parent="CanvasLayer"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 320.0
offset_top = -120.0
offset_right = 850.0
offset_bottom = -10.0
grow_vertical = 0
bbcode_enabled = true
text = ""
scroll_following = true

[node name="PopupContainer" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="CommandUI" parent="CanvasLayer" instance=ExtResource("3_command")]
visible = false
anchors_preset = 0
offset_left = 500.0
offset_top = 200.0
offset_right = 700.0
offset_bottom = 420.0

[node name="TargetSelectorUI" parent="CanvasLayer" instance=ExtResource("4_target")]
visible = false
anchors_preset = 0
offset_left = 400.0
offset_top = 250.0
offset_right = 600.0
offset_bottom = 400.0
